--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <button class="btn" data-clipboard-target="#shortlink">
         Copy to clipboard
     </button><br/>
-    <p>Anyone who navigates to this link will be redirected to one of the above sites</p>
+    <p>Anyone who navigates to this link will be redirected to one of the below sites</p>
     <h4>List:</h4>
     <ol id="thelist">
     </ol>
